[gd_scene load_steps=19 format=3 uid="uid://c0lpp47foonjk"]

[ext_resource type="Script" uid="uid://br88754wd7ugc" path="res://Games/counter-strike/components/player_camera/player_camera.gd" id="1_xcllb"]
[ext_resource type="AudioStream" uid="uid://bxtbhlkkohlb3" path="res://Games/counter-strike/sounds/player/pl_step1.wav" id="2_gpi6l"]
[ext_resource type="Script" uid="uid://cu12m5nppftc4" path="res://Games/counter-strike/components/camera/CS_CameraSettings.gd" id="3_b0kl6"]
[ext_resource type="AudioStream" uid="uid://b51c5rtyh84m1" path="res://Games/counter-strike/sounds/player/pl_step2.wav" id="3_x8oly"]
[ext_resource type="AudioStream" uid="uid://ddvq5ggwvsxel" path="res://Games/counter-strike/sounds/player/pl_step3.wav" id="4_p3une"]
[ext_resource type="AudioStream" uid="uid://ekhkc1q6itir" path="res://Games/counter-strike/sounds/player/pl_step4.wav" id="5_m4xc1"]
[ext_resource type="Script" uid="uid://5by2ms76p5wg" path="res://addons/simusdev/multiplayer/SD_MPPropertySynchronizer.gd" id="6_56762"]
[ext_resource type="Script" uid="uid://vem3fl0vut75" path="res://addons/simusdev/multiplayer/SD_MPPSSyncedBase.gd" id="7_bvpqu"]
[ext_resource type="PackedScene" uid="uid://c623d1x2oot8c" path="res://Games/counter-strike/components/hands/CS_EntityHands.tscn" id="8_p3une"]
[ext_resource type="Script" uid="uid://cvr8rp4fvo3m0" path="res://addons/simusdev/multiplayer/SD_MPPSSyncedProperty.gd" id="8_qsxk8"]
[ext_resource type="PackedScene" uid="uid://bb30gdt6q8ij" path="res://addons/simusdev/components/fp_controller/source_like/W_FPCSourceLikeCamera.tscn" id="8_x8oly"]

[sub_resource type="Resource" id="Resource_6kgtx"]
script = ExtResource("8_qsxk8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["position", "rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../breath/bobbing/W_FPCSourceLikeCamera")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Animation" id="Animation_tm2lb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("breath/bobbing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("breath/bobbing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_b0kl6"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("breath/bobbing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("breath/bobbing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0174533), Vector3(0, 0, 0), Vector3(0, 0, -0.0174533), Vector3(0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_on_bobbing_animation_footstep"
}, {
"args": [],
"method": &"_on_bobbing_animation_footstep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n2roe"]
_data = {
&"RESET": SubResource("Animation_tm2lb"),
&"idle": SubResource("Animation_b0kl6")
}

[sub_resource type="Animation" id="Animation_i1cta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("breath:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_n2roe"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("breath:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.07, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpi6l"]
_data = {
&"RESET": SubResource("Animation_i1cta"),
&"idle": SubResource("Animation_n2roe")
}

[node name="PlayerCamera" type="Node3D" node_paths=PackedStringArray("controller_camera", "_bobbing", "_hands", "_camera3d", "camera")]
script = ExtResource("1_xcllb")
controller_camera = NodePath("breath/bobbing/W_FPCSourceLikeCamera")
_footsteps_sounds = Array[AudioStream]([ExtResource("2_gpi6l"), ExtResource("3_x8oly"), ExtResource("4_p3une"), ExtResource("5_m4xc1")])
_bobbing = NodePath("breath/bobbing")
_hands = NodePath("breath/bobbing/W_FPCSourceLikeCamera/Camera3D/CS_EntityHands")
_camera3d = NodePath("breath/bobbing/W_FPCSourceLikeCamera/Camera3D")
camera = NodePath("breath/bobbing/W_FPCSourceLikeCamera")

[node name="SD_MPPropertySynchronizer" type="Node" parent="."]
script = ExtResource("6_56762")
properties = Array[ExtResource("7_bvpqu")]([SubResource("Resource_6kgtx")])
metadata/_custom_type_script = "uid://5by2ms76p5wg"

[node name="CS_CameraSettings" type="Node" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("3_b0kl6")
check_authority = true
camera = NodePath("../breath/bobbing/W_FPCSourceLikeCamera")
metadata/_custom_type_script = "uid://cu12m5nppftc4"

[node name="breath" type="Node3D" parent="."]

[node name="bobbing" type="Node3D" parent="breath"]

[node name="W_FPCSourceLikeCamera" parent="breath/bobbing" instance=ExtResource("8_x8oly")]
make_current_at_start = false

[node name="CS_EntityHands" parent="breath/bobbing/W_FPCSourceLikeCamera/Camera3D" index="0" instance=ExtResource("8_p3une")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0.558043, -0.0648931, -0.904921)

[node name="bobbing_animation" type="AnimationPlayer" parent="."]
callback_mode_process = 2
libraries = {
&"": SubResource("AnimationLibrary_n2roe")
}

[node name="breath_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gpi6l")
}
autoplay = "idle"

[node name="footstep" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.04178, 0)
stream = ExtResource("2_gpi6l")
volume_db = -30.0
unit_size = 2.5
bus = &"game"
attenuation_filter_cutoff_hz = 20500.0

[editable path="breath/bobbing/W_FPCSourceLikeCamera"]
